--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>lOvE mAtHs</title>
+    <title>lOvE mAtHs!</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 </head>
 
 <body>
     <h1 class="heading">
         <img src="assets/images/logo.png" alt="logo of heart with maths symbles">
-        Love Maths
+        Ben's Math Game
     </h1>
 
     <div class="game-area">
